# govscape

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTOR.md  DATA_MODEL.md  Dockerfile  Dockerfile.embedding  Dockerfile.server  README.md  compose.yaml  data_model.md  govscape_conf  gunicorn.conf.py  nginx_conf  pyproject.toml  pytest.ini  test_file.py
.devcontainer/: Dockerfile  compose.yaml  compose.yml  devcontainer-lock.json  devcontainer.json  post-create-setup.sh
.github/workflows/: ci.yml  deploy-frontend.yml  publish-base-image.yml
docker/images/govscape-base/: Dockerfile
govscape/: pyproject.toml
govscape/benchmarks/: benchmark_ocr.py  data_loader_benchmark.py  filter_strategy_benchmark.py  hybrid_vector_index_benchmark.py  keyword_index_benchmark.py  keyword_index_gov_benchmark.py  metadata_index_benchmark.py  ocr_benchmark.py  vector_index_benchmark.py  vector_index_benchmark_realistic.py
govscape/govscape/: OCREngines.py  __init__.py  base.py  config.py  data_loader.py  embedding_models.py  filter.py  indexing.py  metadata_extraction.py  npy_to_bin.py  pdf_processing_pipeline.py  pdf_to_embed.py  pdf_to_embed_multigpu.py  query.py  server.py  text_embedding_models.py  utils.py  visual_embedding_models.py
govscape/govscape/api/: __init__.py
govscape/govscape/api/endpoints/: health.py  pages.py  search.py
govscape/govscape/indexing/: __init__.py  filter_specs.py  hybrid.py  keyword.py  metadata.py  vector.py
govscape/govscape/processing/: __init__.py  embedded_image_extraction_stage.py  ocr_example.py  ocr_processing_stage.py  page_image_embedding_stage.py  pdf_extraction_stage.py  processing_stage.py  text_embedding_stage.py
govscape/govscape/processing/ocr/: README.md  __init__.py  abstract_ocr.py  base_ocr.py  easy_ocr.py  easyocr_impl.py  ocr_my_pdf.py  ocrmypdf_impl.py  olm_ocr.py  olmocr_impl.py  paddle_my_ocr.py  paddleocr_impl.py
govscape/ocrCode/: easy_run.py  ocrmypdf_run.py  olm_run.py  paddle_run.py
govscape/tests/: conftest.py  test_embedding_pipeline.py  test_hybrid_index.py  test_keyword_indexes.py  test_local_data_loader.py  test_metadata_indexes.py  test_ocr.py  test_ocr_benchmark.py  test_serving.py  test_vector_indices.py
interface/: package-lock.json  package.json
interface/src/: app.html
interface/src/lib/components/: AdvancedSearch.svelte  CookieConsent.svelte  PDFPreview.svelte  ResultsGrid.svelte  (+2 more)
interface/src/routes/: +error.svelte  +layout.svelte  +page.svelte
scripts/: cdx_parquet_to_sqlite.py  clear_s3_prod.sh  embeddings_pipeline.sh  generate_embeddings.sh  generate_embeddings_distributed.sh  generate_embeddings_docker.sh  index_embeddings.sh  index_embeddings_img_pg.sh  index_embeddings_text.sh  index_keywords.sh  index_metadata.sh  ocr_statistics.py  process_cdxs_2020_one_off.py  retrieve_pdfs.sh  s3_ec2_embedding_pipeline.py  server_setup.sh  setup_instance.sh
scripts/data_prep/: archive_clean_pdfs.py  cdx_descriptive_statistics.py  process_cdxs.py  retrieve_pdfs.py
scripts/indexing/: generate_index_embedding.py  generate_index_keyword.py  generate_index_metadata.py
scripts/pipeline/: run_embedding_pipeline.py  start_embedding_servers.py
scripts/python_helpers/: __init__.py  archive_clean_pdfs.py  download_s3_embeddings.py  download_test_data.py  generate_index_embedding.py  generate_index_keyword.py  generate_index_metadata.py  get_pdf_title.py  process_cdxs.py  remove_sha1.py  retrieve_pdfs.py  retrieve_pdfs_2020_one_off.py  run_embedding_pipeline.py  run_gunicorn.py  s3_embedding_indexing_pipeline.py  s3_embedding_pipeline.py  s3_text_indexing_pipeline.py  start_api_server.py  start_embedding_servers.py
scripts/serving/: run_gunicorn.py  start_api_server.py
(+11 files in other folders)
