# src/pyproject.toml
[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <your@name.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.14"
govscape = { path = "govscape", develop = true }
boto3 = "^1.39.4"
warcio = "^1.7.5"
pandas = "^2.3.1"
pyarrow = "^21.0.0"
gunicorn = "^23.0.0"
s5cmd = "^0.3.3"
scipy = "^1.13"
npm = "^0.1.1"
awscli = "^1.42.66"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
